# agent-toys

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mem_lite/: server.py
tests/: __init__.py  conftest.py  test_integration_and_edge_cases.py  test_memory_crud.py  test_search.py  test_tags_relations.py
