[project]
name = "mem-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mario Taddeucci", email = "mariotaddeucci@gmx.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "python-ulid>=2.3.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.22.0",
    "greenlet>=3.0.0",
]

[project.scripts]
mem-lite = "mem_lite:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
